css/styles.css
/* ... */
/* =============================================================================
   HTML5 reset
   ========================================================================== */

article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
audio[controls], canvas, video { display: inline-block; *display: inline; *zoom: 1; }


html { font-size: 100%; overflow-y: scroll; -webkit-overflow-scrolling: touch; -webkit-tap-highlight-color: rgba(0,0,0,0); -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }

body {  -webkit-font-smoothing: antialiased;
    -webkit-text-size-adjust: 100%;
    -ms-font-smoothing: antialiased;
    -ms-text-size-adjust: 100%;
    -moz-font-smoothing: antialiased;
    -moz-text-size-adjust: 100%; 
    margin: 0; font-size: 13px; line-height: 1.231; 
  }

body, button, input, select, textarea { font-family: sans-serif; color: #222; }


::-moz-selection { background: #5db7cd; color: #fff; text-shadow: none; }
::selection { background: #5db7cd; color: #fff; text-shadow: none; }

a {
    text - decoration: none;
    color: inherit
}
a: active,
a: focus {
    outline: 0
}

a {outline: 0 !important;}
a:focus {outline: 0 !important;}


/* =============================================================================
   Site styles
   ========================================================================== */


*, *:before, *:after {
  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }


html, body{
   background-color: #E8E8E8;
   width: 100%;
   height: 100%; 
   overflow: hidden;
}

/* text */

#text_container {
    width:100%;
    height:100%;
    top:0px;
    left:0px;
}

#description {
	position:absolute;
	overflow:hidden;
    top:50%;
    left:65%;
    width:700px;
    height:800px;
    margin-left: -235.5px;
	margin-top: -400px;
    z-index:1;
}

#uber_update {
	position:absolute;
	left:210px;
	top:40px;
	width:464.83px;
	height:126.09px;
	background-repeat:no-repeat;
	background-image:url(../img/uber_update.png);
	z-index:-1;
	background-size:60%;
}

#identify {
	position:absolute;
	top:140px;
	left:30px;
	width:224.26px;
	height:49.33px;
	background-repeat:no-repeat;
	background-image:url(../img/B1_s.png);
}

#identify:hover {
   background-image: url(../img/B1.png);
   cursor:pointer;

}

#B1 {
	position:absolute;
	top:140px;
	left:30px;
	width:224.26px;
	height:49.33px;
	background-repeat:no-repeat;
	background-image:url(../img/B1.png);
}

#order {
	position:absolute;
	top:140px;
	left:250px;
	width:224.26px;
	height:49.33px;
	background-repeat:no-repeat;
	background-image:url(../img/B2_s.png);
}

#order:hover {
   background-image: url(../img/B2.png);
   cursor:pointer;
}

#B2 {
	position:absolute;
	top:140px;
	left:250px;
	width:224.26px;
	height:49.33px;
	background-repeat:no-repeat;
	background-image:url(../img/B2.png);
}

#profile {
	position:absolute;
	top:140px;
	left:470px;
	width:224.26px;
	height:49.33px;
	background-repeat:no-repeat;
	background-image:url(../img/B3_s.png);
}

#profile:hover {
   background-image: url(../img/B3.png);
   cursor:pointer;
}

#B3 {
	position:absolute;
	top:140px;
	left:470px;
	width:224.26px;
	height:49.33px;
	background-repeat:no-repeat;
	background-image:url(../img/B3.png);
}

h1 {
	font-weight:bold;
	font-family:helvetica;
}

p {
	font-family:helvetica;
	font-size:16;

}

#screen1_text{
	position:absolute;
	left:100px;
	top: 200px;
	width:490px;
	height:450px;
	font-size:16px;
}

#screen2_text{
	position:absolute;
	left:100px;
	top: 200px;
	width:490px;
	height:450px;
	font-size:16px;
}

#screen3_text{
	position:absolute;
	left:100px;
	top: 200px;
	width:490px;
	height:450px;
	font-size:16px;
}

#iphone {
    position:absolute;
    top:50%;
    left:25%;
    width:450px;
    height:850px;
    margin-left: -235.5px;
	margin-top: -430.5px;
    background-repeat:no-repeat;
    background-size:85% 93%;
    background-position:center center;
    background-image:url(..//img/iphone.png);
    z-index:1;
    vertical-align: middle
}

#screen_container {
	position:absolute;
	overflow:hidden;
	/*background-color:blue;*/
	top:0;
	left:0;
	width:340px;
	height:590px;
	margin-left:60px;
	margin-top:110px;
}

/*-------------screen 1 begin-----------------*/

#map {
	position:absolute;
	width:340px;
	height:603.25px;
	background-repeat:no-repeat;
	background-image:url(../img/app_bg.png);
	z-index:1;
}


.top {
	position:absolute;
	width:340px;
	height:63.75px;
	background-repeat:no-repeat;
	background-image:url(../img/top.png);
	z-index:3;
}

#bottom {
	position:absolute;
	top:430px;
	width:340px;
	height:160.16px;
	background-repeat:no-repeat;
	background-image:url(../img/footer_1.png);
	z-index:3;
	vertical-align:middle;
}

/*button slider

.slider-wrapper {
  position: relative;
  margin: 40px 0 60px 0;
  z-index:102;
  top: 395px;
  left: 10px;
}

.slider {
  width: 260px;
  height: 20px;
  display: inline-block;
  position: absolute;
}


.ui-slider-handle {
  position: absolute;
  width:62.5px;
  height:55.67px;
  outline: none;
  z-index: 20;
  background-image:url(../img/button.png);
}

/* button stuff end */

/*#car_icons {
	position:absolute;
	top:5px;
	left:13px;
	width:209.49px;
	height:39.39px;
	background-repeat:no-repeat;
	background-image:url(../img/car_icons.png);
	z-index:5;
}*/

#c1 {
	position:absolute;
	top:10px;
	left:13px;
	width:34.5px;
	height:34.5px;
	background-repeat:no-repeat;
	background-image:url(../img/c1.png);
	z-index:5;
}

#c2 {
	position:absolute;
	top:7px;
	left:12px;
	width:34.5px;
	height:34.5px;
	background-repeat:no-repeat;
	background-image:url(../img/c2.png);
	z-index:5;
}

#c3 {
	position:absolute;
	top:8px;
	left:11px;
	width:34.5px;
	height:34.5px;
	background-repeat:no-repeat;
	background-image:url(../img/c3.png);
	z-index:5;
}

#c4 {
	position:absolute;
	top:5px;
	left:11px;
	width:34.5px;
	height:34.5px;
	background-repeat:no-repeat;
	background-image:url(../img/c4.png);
	z-index:5;
}
/* ... */

